--- a/Vass_2/config.ui
+++ b/Vass_2/config.ui
@@ -40,12 +40,12 @@
          <rect>
           <x>10</x>
           <y>20</y>
-          <width>381</width>
+          <width>421</width>
           <height>351</height>
          </rect>
         </property>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="2" column="1">
+         <item row="5" column="1">
           <widget class="QLabel" name="m_p_l">
            <property name="autoFillBackground">
             <bool>false</bool>
@@ -58,78 +58,16 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item row="4" column="2">
+          <widget class="QKeySequenceEdit" name="time"/>
+         </item>
+         <item row="4" column="0">
           <widget class="QLabel" name="label_3">
            <property name="autoFillBackground">
             <bool>false</bool>
            </property>
            <property name="text">
             <string>Time</string>
-           </property>
-           <property name="margin">
-            <number>10</number>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_7">
-           <property name="autoFillBackground">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>Configuration</string>
-           </property>
-           <property name="margin">
-            <number>10</number>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLabel" name="t_p_l">
-           <property name="autoFillBackground">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>TextLabel</string>
-           </property>
-           <property name="margin">
-            <number>10</number>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="autoFillBackground">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>Icon panel</string>
-           </property>
-           <property name="margin">
-            <number>10</number>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_5">
-           <property name="autoFillBackground">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>Media player</string>
-           </property>
-           <property name="margin">
-            <number>10</number>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <widget class="QLabel" name="c_p_l">
-           <property name="autoFillBackground">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>TextLabel</string>
            </property>
            <property name="margin">
             <number>10</number>
@@ -146,6 +84,87 @@
            </property>
            <property name="margin">
             <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="2">
+          <widget class="QKeySequenceEdit" name="media"/>
+         </item>
+         <item row="6" column="0">
+          <widget class="QLabel" name="label_7">
+           <property name="autoFillBackground">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Configuration</string>
+           </property>
+           <property name="margin">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="2">
+          <widget class="QKeySequenceEdit" name="config_2"/>
+         </item>
+         <item row="4" column="1">
+          <widget class="QLabel" name="t_p_l">
+           <property name="autoFillBackground">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+           <property name="margin">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QKeySequenceEdit" name="icon"/>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="autoFillBackground">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Icon panel</string>
+           </property>
+           <property name="margin">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <widget class="QLabel" name="label_5">
+           <property name="autoFillBackground">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Media player</string>
+           </property>
+           <property name="margin">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QLabel" name="c_p_l">
+           <property name="autoFillBackground">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+           <property name="margin">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
+          <widget class="QPushButton" name="submit">
+           <property name="text">
+            <string>Submit</string>
            </property>
           </widget>
          </item>
